--- a/about.html
+++ b/about.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title> About Me</title>
+  </head>
+  <body>
+    <h1>About Me</h1>
+    <p>Some stuff about me</p>
+  </body>
+</html>
