--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <head>
     <body>
       <h1>Welcome to my website!</h1>
-      <p>How was your day?</p>
+      <p>Stuff you can click on</p>
+      <a href="./about">About Me</a>
     </body>
   </head>
 </html>
