--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>My Portfolio</title>
+  <meta charset=UTF-8>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>A Word Of Tech</title>
+  <link rel="stylesheet" href="styles.css">
   </head>
     <body>
-      <h1>Welcome to my website!</h1>
-      <p>Stuff you can click on</p>
-      <a href="./about">About Me</a>
+      <header>
+        <nav>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
+
+      <main>
+        <section class="intro">
+          <h1>Welcome to my portfolio</h1>
+          <p>This is my website</p>
+          <button id="interactive-btn">Click Me!</button>
+        </section>   
+      </main>
+      <footer>
+        <p>&copy; 2025 awordoftech</p>
+      </footer>
+
+      <script src="scripts.js"></script>
     </body>
 </html>
