--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="A Word Of Tech">
+  <title>ZB-Technical Writer</title>
+  <link rel="stylesheet" href="assets/styles.css">
+</head>
 
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <section id="home">
+    <div class="container">
+      <h1>Welcome to my portfolio</h1>
+      <p>I help communicate about tech</p>
+    </div>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 ZB. All rights reserved.</p>
+  </footer>
+
+  <script src="assets/scripts.js"></script>
+</body>
+</html>
+  
