--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -1,1 +1,58 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="My Portfolio - Technical Writer">
+  <title>Portfolio-ZB</title>
+  <link rel="stylesheet" href="assets/styles.css">
+</head>
+
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+<section id="portfolio">
+     <div class="container">
+       <h2>Writing samples</h2>
+       <div class="portfolio-items">
+         <h3>Project 1</h3>
+         <p>Description of the project.</p>
+        </div>
+       <div class="portfolio-items">
+         <h3>Project 2</h3>
+         <p>Description of the project.</p>
+        </div>
+       <div class="portfolio-items">
+         <h3>Project 3</h3>
+         <p>Description of the project.</p>
+        </div>
+       <div class="portfolio-items">
+         <h3>Project 4</h3>
+         <p>Description of the project.</p>
+        </div>  
+     <div class="portfolio-items">
+         <h3>Project 5</h3>
+         <p>Description of the project.</p>
+       </div>
+     </div>
+   </div>  
+</section>
+
+<footer>
+    <p>&copy; 2025 ZB. All rights reserved.</p>
+</footer>
+
+  <script src="assets/scripts.js"></script>
+</body>
+</html>
+  
 
