--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -1,1 +1,45 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="My Portfolio - Technical Writer">
+  <title>Portfolio-ZB</title>
+  <link rel="stylesheet" href="assets/styles.css">
+</head>
 
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+<section id="contact">
+     <div class="container">
+          <h2>Contact Me</h2>
+          <form action="mailto:eviterniti@gmail.com" method="POST" enctype="text/plain">
+            <label for=name">Name:</label>
+            <input type="text" id="name" name="name" required>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" required></textarea>
+            <button type="submit">Send</button>
+          </form>
+     </div>
+</section>
+  
+<footer>
+    <p>&copy; 2025 ZB. All rights reserved.</p>
+</footer>
+
+  <script src="assets/scripts.js"></script>
+</body>
+</html>
+  
