--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,8 +7,10 @@
   <title>ZB-Technical Writer</title>
   <link rel="stylesheet" href="assets/styles.css">
 </head>
-
 <body>
+
+<!-- Header with navigation bar-->
+  
   <header>
     <nav>
       <ul>
@@ -20,12 +22,16 @@
     </nav>
   </header>
 
+<!-- Main content section -->
+  
   <section id="home">
     <div class="container">
       <h1>Welcome to my portfolio</h1>
       <p>I help communicate about tech</p>
     </div>
   </section>
+
+<!--Footer-->
 
   <footer>
     <p>&copy; 2025 ZB. All rights reserved.</p>
