--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="A Word Of Tech">
   <title>ZB-Technical Writer</title>
-  <link rel="stylesheet" href="assets/styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -39,7 +39,7 @@
     <p>&copy; 2025 ZB. All rights reserved.</p>
   </footer>
 
-  <script src="assets/scripts.js"></script>
+  <script src="scripts.js"></script>
   
   </body>
 
