--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="A Word Of Tech">
-  <title>ZB-Technical Writer</title>
+  <title>ZB Technical Writer</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -14,6 +13,7 @@
 <!-- Header with navigation bar-->
   
   <header>
+    <h1>My Portfolio</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
