--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -16,7 +16,7 @@
       </div>
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
-        <li><a href="#writing">Writing Samples</a></li>
+        <li><a href="#portfolio">Writing Samples</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
