--- a/index.html
+++ b/index.html
@@ -3,48 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Your Name - Portfolio</title>
+    <title>ZB - Home</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="#about">About Me</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="projects.html">Samples</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
     
-    <section id="about">
-        <h1>About Me</h1>
-        <p>This is where you introduce yourself, your background, and your skills.</p>
-    </section>
-    
-    <section id="projects">
-        <h1>Projects</h1>
-        <div class="project">
-            <h2>Project 1</h2>
-            <p>Brief description of the project.</p>
-            <a href="#">View Project</a>
-        </div>
-        <div class="project">
-            <h2>Project 2</h2>
-            <p>Brief description of the project.</p>
-            <a href="#">View Project</a>
-        </div>
-    </section>
-
-    <section id="contact">
-        <h1>Contact</h1>
-        <p>You can reach me at: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+    <section>
+        <h1>Welcome to My Portfolio!</h1>
+        <p>This is the home page. Learn more about me, check out my projects, or get in touch!</p>
     </section>
 
     <footer>
-        <p>&copy; 2025 Your Name</p>
+        <p>&copy; 2025 ZB</p>
     </footer>
 </body>
 </html>
-
