--- a/about.html
+++ b/about.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Me</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    
+    <section>
+        <h1>About Me</h1>
+        <p>Hi! I'm ZB, a technical wroter with a passion for writing simple, concise and accessible documentation.</p>
+        <p>This section detailed information about my background, education, skills, and experience.</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 ZB</p>
+    </footer>
+</body>
+</html>
 
