--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,56 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Projects</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    
+    <section>
+        <h1>My Projects</h1>
+        <div class="project">
+            <h2>Project 1</h2>
+            <p>Short description of Project 1.</p>
+            <a href="#">View Project</a>
+        </div>
+        <div class="project">
+            <h2>Project 2</h2>
+            <p>Short description of Project 2.</p>
+            <a href="#">View Project</a>
+        </div>
+        <div class="project">
+            <h2>Project 3</h2>
+            <p>Short description of Project 3.</p>
+            <a href="#">View Project</a>
+        </div>
+        <div class="project">
+            <h2>Project 4</h2>
+            <p>Short description of Project 4.</p>
+            <a href="#">View Project</a>
+        </div>
+        <div class="project">
+            <h2>Project 5</h2>
+            <p>Short description of Project 5.</p>
+            <a href="#">View Project</a>
+        </div>
+        <!-- Add more projects as needed -->
+    </section>
+
+    <footer>
+        <p>&copy; 2025 ZB</p>
+    </footer>
+</body>
+</html>
 
