--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    
+    <section>
+        <h1>Contact Me</h1>
+        <p>If you’d like to get in touch, feel free to send me an email at:</p>
+        <p><a href="mailto:your.email@example.com">eviterniti@gmail.com</a></p>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 ZB</p>
+    </footer>
+</body>
+</html>
 
