--- a/projects.html
+++ b/projects.html
@@ -20,37 +20,48 @@
     
     <section>
         <h1>My Projects</h1>
-        <div class="project">
-            <h2>Project 1</h2>
-            <p>Short description of Project 1.</p>
-            <a href="#">View Project</a>
+        <!-- Project Carousel -->
+        <div class="carousel-container">
+            <div class="carousel">
+                <div class="carousel-item">
+                    <h2>Project 1</h2>
+                    <img src="assets/project1.jpg" alt="Project 1">
+                    <p>A brief description of Project 1. This is a project description that explains the key aspects of this project.</p>
+                    <a href="#">View Project</a>
+                </div>
+                <div class="carousel-item">
+                    <h2>Project 2</h2>
+                    <img src="assets/project2.jpg" alt="Project 2">
+                    <p>A brief description of Project 2. This is a project description that explains the key aspects of this project.</p>
+                    <a href="#">View Project</a>
+                </div>
+                <div class="carousel-item">
+                    <h2>Project 3</h2>
+                    <img src="assets/project3.jpg" alt="Project 3">
+                    <p>A brief description of Project 3. This is a project description that explains the key aspects of this project.</p>
+                    <a href="#">View Project</a>
+                </div>
+                <div class="carousel-item">
+                    <h2>Project 4</h2>
+                    <img src="assets/project4.jpg" alt="Project 4">
+                    <p>A brief description of Project 4. This is a project description that explains the key aspects of this project.</p>
+                    <a href="#">View Project</a>
+                </div>
+                <div class="carousel-item">
+                    <h2>Project 5</h2>
+                    <img src="assets/project5.jpg" alt="Project 5">
+                    <p>A brief description of Project 5. This is a project description that explains the key aspects of this project.</p>
+                    <a href="#">View Project</a>
+                </div>
+                <!-- Add more carousel items here -->
+            </div>
         </div>
-        <div class="project">
-            <h2>Project 2</h2>
-            <p>Short description of Project 2.</p>
-            <a href="#">View Project</a>
-        </div>
-        <div class="project">
-            <h2>Project 3</h2>
-            <p>Short description of Project 3.</p>
-            <a href="#">View Project</a>
-        </div>
-        <div class="project">
-            <h2>Project 4</h2>
-            <p>Short description of Project 4.</p>
-            <a href="#">View Project</a>
-        </div>
-        <div class="project">
-            <h2>Project 5</h2>
-            <p>Short description of Project 5.</p>
-            <a href="#">View Project</a>
-        </div>
-        <!-- Add more projects as needed -->
     </section>
 
     <footer>
         <p>&copy; 2025 ZB</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
-
