--- a/projects.html
+++ b/projects.html
@@ -19,44 +19,39 @@
     </header>
     
     <section>
-        <h1>My Projects</h1>
+        <h1>My Writing Projects</h1>
         <!-- Project Carousel -->
         <div class="carousel-container">
             <div class="carousel">
                 <!-- Project 1 -->
                 <div class="carousel-item">
-                    <h2>Project 1</h2>
-                    <img src="assets/project1.jpg" alt="Project 1">
-                    <p>A brief description of Project 1. This is a project description that explains the key aspects of this project.</p>
-                    <a href="#">View Project</a>
+                    <h2>Project 1: Writing Sample 1</h2>
+                    <p>This is a sample of the first writing piece. It can be an article, blog post, or essay that demonstrates your writing skills. It's a great way to showcase your work and provide potential clients or employers with a sample of your writing ability.</p>
+                    <a href="#">Read More</a>
                 </div>
                 <!-- Project 2 -->
                 <div class="carousel-item">
-                    <h2>Project 2</h2>
-                    <img src="assets/project2.jpg" alt="Project 2">
-                    <p>A brief description of Project 2. This is a project description that explains the key aspects of this project.</p>
-                    <a href="#">View Project</a>
+                    <h2>Project 2: Writing Sample 2</h2>
+                    <p>This is a sample of the second writing piece. Similar to the first, it can showcase a different style or topic. Maybe this piece is more technical, or perhaps it's more creative—give a brief description to entice the viewer to click.</p>
+                    <a href="#">Read More</a>
                 </div>
                 <!-- Project 3 -->
                 <div class="carousel-item">
-                    <h2>Project 3</h2>
-                    <img src="assets/project3.jpg" alt="Project 3">
-                    <p>A brief description of Project 3. This is a project description that explains the key aspects of this project.</p>
-                    <a href="#">View Project</a>
+                    <h2>Project 3: Writing Sample 3</h2>
+                    <p>This is the third writing piece. Again, highlight what makes this sample stand out, whether it’s the writing style, the topic, or the complexity of the subject matter. Each project you feature should show a different facet of your writing expertise.</p>
+                    <a href="#">Read More</a>
                 </div>
                 <!-- Project 4 -->
                 <div class="carousel-item">
-                    <h2>Project 4</h2>
-                    <img src="assets/project4.jpg" alt="Project 4">
-                    <p>A brief description of Project 4. This is a project description that explains the key aspects of this project.</p>
-                    <a href="#">View Project</a>
+                    <h2>Project 4: Writing Sample 4</h2>
+                    <p>The fourth project could be a personal essay, a story, or a specific kind of blog post. This is your opportunity to display variety in your writing portfolio. Talk about the subject matter or writing style that makes this project unique.</p>
+                    <a href="#">Read More</a>
                 </div>
                 <!-- Project 5 -->
                 <div class="carousel-item">
-                    <h2>Project 5</h2>
-                    <img src="assets/project5.jpg" alt="Project 5">
-                    <p>A brief description of Project 5. This is a project description that explains the key aspects of this project.</p>
-                    <a href="#">View Project</a>
+                    <h2>Project 5: Writing Sample 5</h2>
+                    <p>The fifth project could be a case study, a research piece, or any writing that demonstrates your ability to research and present information. Give a short description and explain what makes this project a valuable part of your portfolio.</p>
+                    <a href="#">Read More</a>
                 </div>
             </div>
             <!-- Navigation Dots -->
@@ -67,7 +62,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 ZB</p>
+        <p>&copy; 2025 Your Name</p>
     </footer>
 
     <script src="script.js"></script>
