--- a/projects.html
+++ b/projects.html
@@ -25,33 +25,58 @@
             <div class="carousel">
                 <!-- Project 1 -->
                 <div class="carousel-item">
-                    <h2>Project 1: Writing Sample 1</h2>
-                    <p>This is a sample of the first writing piece. It can be an article, blog post, or essay that demonstrates your writing skills. It's a great way to showcase your work and provide potential clients or employers with a sample of your writing ability.</p>
-                    <a href="#">Read More</a>
+                    <div class="carousel-item-content">
+                        <img src="assets/project1.jpg" alt="Project 1" class="project-image">
+                        <div class="text-content">
+                            <h2>Project 1: Writing Sample 1</h2>
+                            <p>This is a sample of the first writing piece. It can be an article, blog post, or essay that demonstrates your writing skills. It's a great way to showcase your work and provide potential clients or employers with a sample of your writing ability.</p>
+                            <a href="#">Read More</a>
+                        </div>
+                    </div>
                 </div>
                 <!-- Project 2 -->
                 <div class="carousel-item">
-                    <h2>Project 2: Writing Sample 2</h2>
-                    <p>This is a sample of the second writing piece. Similar to the first, it can showcase a different style or topic. Maybe this piece is more technical, or perhaps it's more creative—give a brief description to entice the viewer to click.</p>
-                    <a href="#">Read More</a>
+                    <div class="carousel-item-content">
+                        <img src="assets/project2.jpg" alt="Project 2" class="project-image">
+                        <div class="text-content">
+                            <h2>Project 2: Writing Sample 2</h2>
+                            <p>This is a sample of the second writing piece. Similar to the first, it can showcase a different style or topic. Maybe this piece is more technical, or perhaps it's more creative—give a brief description to entice the viewer to click.</p>
+                            <a href="#">Read More</a>
+                        </div>
+                    </div>
                 </div>
                 <!-- Project 3 -->
                 <div class="carousel-item">
-                    <h2>Project 3: Writing Sample 3</h2>
-                    <p>This is the third writing piece. Again, highlight what makes this sample stand out, whether it’s the writing style, the topic, or the complexity of the subject matter. Each project you feature should show a different facet of your writing expertise.</p>
-                    <a href="#">Read More</a>
+                    <div class="carousel-item-content">
+                        <img src="assets/project3.jpg" alt="Project 3" class="project-image">
+                        <div class="text-content">
+                            <h2>Project 3: Writing Sample 3</h2>
+                            <p>This is the third writing piece. Again, highlight what makes this sample stand out, whether it’s the writing style, the topic, or the complexity of the subject matter. Each project you feature should show a different facet of your writing expertise.</p>
+                            <a href="#">Read More</a>
+                        </div>
+                    </div>
                 </div>
                 <!-- Project 4 -->
                 <div class="carousel-item">
-                    <h2>Project 4: Writing Sample 4</h2>
-                    <p>The fourth project could be a personal essay, a story, or a specific kind of blog post. This is your opportunity to display variety in your writing portfolio. Talk about the subject matter or writing style that makes this project unique.</p>
-                    <a href="#">Read More</a>
+                    <div class="carousel-item-content">
+                        <img src="assets/project4.jpg" alt="Project 4" class="project-image">
+                        <div class="text-content">
+                            <h2>Project 4: Writing Sample 4</h2>
+                            <p>The fourth project could be a personal essay, a story, or a specific kind of blog post. This is your opportunity to display variety in your writing portfolio. Talk about the subject matter or writing style that makes this project unique.</p>
+                            <a href="#">Read More</a>
+                        </div>
+                    </div>
                 </div>
                 <!-- Project 5 -->
                 <div class="carousel-item">
-                    <h2>Project 5: Writing Sample 5</h2>
-                    <p>The fifth project could be a case study, a research piece, or any writing that demonstrates your ability to research and present information. Give a short description and explain what makes this project a valuable part of your portfolio.</p>
-                    <a href="#">Read More</a>
+                    <div class="carousel-item-content">
+                        <img src="assets/project5.jpg" alt="Project 5" class="project-image">
+                        <div class="text-content">
+                            <h2>Project 5: Writing Sample 5</h2>
+                            <p>The fifth project could be a case study, a research piece, or any writing that demonstrates your ability to research and present information. Give a short description and explain what makes this project a valuable part of your portfolio.</p>
+                            <a href="#">Read More</a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <!-- Navigation Dots -->
@@ -62,7 +87,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Your Name</p>
+        <p>&copy; 2025 ZB</p>
     </footer>
 
     <script src="script.js"></script>
