--- a/index.html
+++ b/index.html
@@ -3,28 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZB - Home</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Your Name - Writer Portfolio</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Me</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <h1>Your Name</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    
-    <section>
-        <h1>Welcome to My Portfolio!</h1>
-        <p>This is the home page. Learn more about me, check out my projects, or get in touch!</p>
-    </section>
-
+    <main>
+        <section class="hero">
+            <h2>Welcome to My Writing Portfolio</h2>
+            <p>Your journey as a storyteller begins here.</p>
+            <a href="projects.html" class="cta-button">Explore My Work</a>
+        </section>
+    </main>
     <footer>
-        <p>&copy; 2025 ZB</p>
+        <p>&copy; 2025 Your Name</p>
     </footer>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
