--- a/about.html
+++ b/about.html
@@ -3,30 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>About Me - Your Name</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Me</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <h1>Your Name</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    
-    <section>
-        <h1>About Me</h1>
-        <p>Hi! I'm ZB, a technical wroter with a passion for writing simple, concise and accessible documentation.</p>
-        <p>This section detailed information about my background, education, skills, and experience.</p>
-    </section>
-
+    <main>
+        <section class="about">
+            <h2>About Me</h2>
+            <p>I'm a writer passionate about storytelling and creating engaging content...</p>
+            <img src="assets/images/your-photo.jpg" alt="Your Photo">
+        </section>
+    </main>
     <footer>
-        <p>&copy; 2025 ZB</p>
+        <p>&copy; 2025 Your Name</p>
     </footer>
 </body>
 </html>
-
