--- a/index.html
+++ b/index.html
@@ -3,33 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Writer Portfolio</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <title>Home - My Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <div class="container">
-            <h1>Your Name</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
-    <main>
-        <section class="hero">
-            <h2>Welcome to My Writing Portfolio</h2>
-            <p>Your journey as a storyteller begins here.</p>
-            <a href="projects.html" class="cta-button">Explore My Work</a>
-        </section>
-    </main>
+
+    <section class="hero">
+        <div class="hero-text">
+            <h1>Welcome to My Portfolio</h1>
+            <p>Creating the future, one line of code at a time.</p>
+        </div>
+    </section>
+
     <footer>
-        <p>&copy; 2025 Your Name</p>
+        <p>&copy; 2025 My Portfolio</p>
     </footer>
-    <script src="scripts/script.js"></script>
 </body>
 </html>
