--- a/about.html
+++ b/about.html
@@ -3,32 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me - Your Name</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <title>About Me</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <div class="container">
-            <h1>Your Name</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
-    <main>
-        <section class="about">
-            <h2>About Me</h2>
-            <p>I'm a writer passionate about storytelling and creating engaging content...</p>
-            <img src="assets/images/your-photo.jpg" alt="Your Photo">
-        </section>
-    </main>
+
+    <section class="about-me">
+        <h2>About Me</h2>
+        <p>Hello! I am [Your Name], a passionate developer who loves building innovative and functional applications. With a background in [Your Field], I specialize in [Technologies you work with].</p>
+    </section>
+
     <footer>
-        <p>&copy; 2025 Your Name</p>
+        <p>&copy; 2025 My Portfolio</p>
     </footer>
 </body>
 </html>
