--- a/projects.html
+++ b/projects.html
@@ -3,45 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects - Your Name</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <title>Projects</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <div class="container">
-            <h1>Your Name</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
-    <main>
-        <section class="projects">
-            <h2>My Projects</h2>
-            <div class="carousel">
-                <!-- Carousel items here -->
-                <div class="carousel-item">
-                    <h3>Project Title 1</h3>
-                    <p>Short project description...</p>
-                    <img src="assets/images/project1.jpg" alt="Project 1">
-                </div>
-                <div class="carousel-item">
-                    <h3>Project Title 2</h3>
-                    <p>Short project description...</p>
-                    <img src="assets/images/project2.jpg" alt="Project 2">
-                </div>
-                <!-- More items -->
-            </div>
-        </section>
-    </main>
+
+    <section class="projects">
+        <h2>My Projects</h2>
+        <div class="carousel">
+            <div class="carousel-item">Project 1</div>
+            <div class="carousel-item">Project 2</div>
+            <div class="carousel-item">Project 3</div>
+            <div class="carousel-item">Project 4</div>
+            <div class="carousel-item">Project 5</div>
+        </div>
+    </section>
+
     <footer>
-        <p>&copy; 2025 Your Name</p>
+        <p>&copy; 2025 My Portfolio</p>
     </footer>
-    <script src="scripts/script.js"></script>
+
+    <script src="script.js"></script>
 </body>
 </html>
