--- a/index.html
+++ b/index.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - My Portfolio</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ZB | Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Me</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
+    <header class="hero">
+     <div class="container">
+        <h1>ZB</h1>
+         <p class="subtitle">Technical writer</p>
+         <!-- NAVIGATION -->
+         <nav class="main-nav">
+           <a href="index.html">Home</a>
+           <a href="about.html">About</a>
+           <a href="projects.html">Projects</a>
+           <a href="writing.html">Writing</a>
+           <a href="contact.html">Contact</a>
         </nav>
+     </div>
     </header>
 
-    <section class="hero">
-        <div class="hero-text">
-            <h1>Welcome to My Portfolio</h1>
+    <section class="section">
+        <div class="container">
+            <h2>Welcome</h2>
             <p>Creating the future, one line of code at a time.</p>
         </div>
     </section>
 
-    <footer>
-        <p>&copy; 2025 My Portfolio</p>
-    </footer>
+    <footer><div class="container">&copy; 2025 ZB</div></footer>
 </body>
 </html>
