--- a/projects.html
+++ b/projects.html
@@ -2,37 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
+    <title>Projects|ZB</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Me</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
+    <header class="simple-header">
+        <div class="container">
+            <h1>Projects</h1>
+            <nav class="main.nav">
+              <a href="index.html">Home</a>
+              <a href="about.html">About</a>
+              <a href="projects.html">Projects</a>
+              <a href="writing.html">Writing</a>
+              <a href="contact.html">Contact</a>
+            </nav>
+        </div>
     </header>
 
-    <section class="projects">
-        <h2>My Projects</h2>
-        <div class="carousel">
-            <div class="carousel-item">Project 1</div>
-            <div class="carousel-item">Project 2</div>
-            <div class="carousel-item">Project 3</div>
-            <div class="carousel-item">Project 4</div>
-            <div class="carousel-item">Project 5</div>
-        </div>
-    </section>
+    <section class="section">
+        <div class="container">
+            <div class="card">
+        <h3>Project Title</h3>
+        <p>Description of what it does, tech used, your role etc.</p>
+        <a href="#">View on Github</a>
+      </div>
+       <!-- Repeat for more projects -->
+    </div>
+</section>
 
-    <footer>
-        <p>&copy; 2025 My Portfolio</p>
-    </footer>
-
-    <script src="script.js"></script>
+<footer><div class="container">&copy; 2025 ZB</div></footer>
 </body>
 </html>
