--- a/writing.html
+++ b/writing.html
@@ -1,1 +1,35 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Writing|ZB</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header class="simple-header">
+        <div class="container">
+            <h1>Technical Writing</h1>
+            <nav class="main.nav">
+              <a href="index.html">Home</a>
+              <a href="about.html">About</a>
+              <a href="projects.html">Projects</a>
+              <a href="writing.html">Writing</a>
+              <a href="contact.html">Contact</a>
+            </nav>
+        </div>
+    </header>
 
+    <section class="section light">
+        <div class="container">
+            <div class="card">
+        <h3>Article Title</h3>
+        <p>Summary of the piece, where it was published, etc.</p>
+        <a href="#">Read article</a>
+      </div>
+       <!-- Repeat for more projects -->
+    </div>
+</section>
+
+<footer><div class="container">&copy; 2025 ZB</div></footer>
+</body>
+</html>
