--- a/contact.html
+++ b/contact.html
@@ -2,40 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>Contact|ZB</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Me</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
+    <header class="simple-header">
+        <div class="container">
+            <h1>Contact</h1>
+            <nav class="main.nav">
+              <a href="index.html">Home</a>
+              <a href="about.html">About</a>
+              <a href="projects.html">Projects</a>
+              <a href="writing.html">Writing</a>
+              <a href="contact.html">Contact</a>
+            </nav>
+        </div>
     </header>
 
-    <section class="contact">
-        <h2>Contact Me</h2>
-        <form action="#" method="POST">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
-
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" required></textarea>
-
-            <button type="submit">Send Message</button>
-        </form>
+    <section class="section">
+        <div class="container">
+         <p>Email: <a href="mailto:eviterniti@gmail.com">eviterniti@gmail.com</a></p>
+        </div>
     </section>
 
-    <footer>
-        <p>&copy; 2025 My Portfolio</p>
-    </footer>
+<footer><div class="container">&copy; 2025 ZB</div></footer>
 </body>
 </html>
