--- a/about.html
+++ b/about.html
@@ -2,29 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Me</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
+    <header class="simple-header">
+        <div class="container">
+            <h1>About Me</h1>
+            <!-- NAVIGATION -->
+            <nav class="main-nav">
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="projects.html">Projects</a>
+                <a href="writing.html">Writing</a>
+                <a href="contact.html">Contact</a>
         </nav>
-    </header>
+    </div>
+</header>
 
-    <section class="about-me">
+    <section class="section">
+        <div class="container">
         <h2>About Me</h2>
-        <p>Hello! I am [Your Name], a passionate developer who loves building innovative and functional applications. With a background in [Your Field], I specialize in [Technologies you work with].</p>
+        <p>Hello! I am ZB, a passionate technical writer who loves writing simple, concise and effective documentation.</p>
+        <!-- Add your background, experience, values, etc. -->
+        </div>
     </section>
 
-    <footer>
-        <p>&copy; 2025 My Portfolio</p>
-    </footer>
+    <footer><div class="container">&copy; 2025 ZB</div>div><footer></footer>
 </body>
 </html>
