--- a/index.html
+++ b/index.html
@@ -3,33 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZB | Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <header class="hero">
-     <div class="container">
-        <h1>ZB</h1>
-         <p class="subtitle">Technical writer</p>
-         <!-- NAVIGATION -->
-         <nav class="main-nav">
-           <a href="index.html">Home</a>
-           <a href="about.html">About</a>
-           <a href="projects.html">Projects</a>
-           <a href="writing.html">Writing</a>
-           <a href="contact.html">Contact</a>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="writing.html">Writing</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
         </nav>
-     </div>
     </header>
 
-    <section class="section">
-        <div class="container">
-            <h2>Welcome</h2>
-            <p>Creating the future, one line of code at a time.</p>
-        </div>
+    <section id="home">
+        <h1>Welcome to My Portfolio</h1>
+        <p>Check out my projects and writing samples!</p>
     </section>
 
-    <footer><div class="container">&copy; 2025 ZB</div></footer>
+    <footer>
+        <p>&copy; 2025 My Portfolio. All rights reserved.</p>
+    </footer>
+    
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
