--- a/index.html
+++ b/index.html
@@ -21,13 +21,8 @@
 
     <section id="home">
         <h1>Welcome to My Portfolio</h1>
-        <p>Check out my projects and writing samples!</p>
+        <p>Discover my work and writing samples!</p>
     </section>
 
     <footer>
-        <p>&copy; 2025 My Portfolio. All rights reserved.</p>
-    </footer>
-    
-    <script src="assets/js/script.js"></script>
-</body>
-</html>
+        <p>&copy; 2025 My Portfolio. All rights
