--- a/about.html
+++ b/about.html
@@ -2,32 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <header class="simple-header">
-        <div class="container">
-            <h1>About Me</h1>
-            <!-- NAVIGATION -->
-            <nav class="main-nav">
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="projects.html">Projects</a>
-                <a href="writing.html">Writing</a>
-                <a href="contact.html">Contact</a>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="writing.html">Writing</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
         </nav>
-    </div>
-</header>
+    </header>
 
-    <section class="section">
-        <div class="container">
-        <h2>About Me</h2>
-        <p>Hello! I am ZB, a passionate technical writer who loves writing simple, concise and effective documentation.</p>
-        <!-- Add your background, experience, values, etc. -->
-        </div>
+    <section id="about">
+        <h1>About Me</h1>
+        <p>Here’s a little about myself...</p>
+        <p>I'm a developer, writer, and creator. I enjoy building things and sharing my knowledge through writing.</p>
     </section>
 
-    <footer><div class="container">&copy; 2025 ZB</div>div><footer></footer>
+    <footer>
+        <p>&copy; 2025 My Portfolio. All rights reserved.</p>
+    </footer>
+
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
