--- a/index.html
+++ b/index.html
@@ -20,10 +20,14 @@
         </nav>
     </header>
 
-    <section id="home">
-        <h1>Welcome to My Portfolio</h1>
-        <p>Discover my work and writing samples!</p>
-    </section>
+<section id="home">
+    <h1>Welcome to My Portfolio</h1>
+    <p>Discover my work and writing samples!</p>
+    <button>Explore My Projects</button> <!-- CTA Button -->
+</section>
+
 
     <footer>
         <p>&copy; 2025 My Portfolio. All rights
+
+ 
