--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Lora:wght@400;700&display=swap" rel="stylesheet">
-    <title>My Portfolio</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <meta name="description" content="Portfolio of [Your Name] - Designer & Developer">
+    <title>[Your Name] - Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+    <!-- Header -->
     <header>
         <nav>
             <ul>
@@ -20,14 +23,19 @@
         </nav>
     </header>
 
-<section id="home">
-    <h1>Welcome to My Portfolio</h1>
-    <p>Discover my work and writing samples!</p>
-    <button>Explore My Projects</button> <!-- CTA Button -->
-</section>
+    <!-- Hero Section -->
+    <section id="home">
+        <h1>Hi, I'm [Your Name]</h1>
+        <p>Designing impactful digital experiences.</p>
+        <button>View My Work</button>
+    </section>
 
-
+    <!-- Footer -->
     <footer>
-        <p>&copy; 2025 My Portfolio. All rights
+        <p>&copy; 2025 [Your Name]. All rights reserved.</p>
+    </footer>
+
+</body>
+</html>
 
  
