--- a/about.html
+++ b/about.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Lora:wght@400;700&display=swap" rel="stylesheet">
-    <title>About Me</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <meta name="description" content="[Your Name] - About Me">
+    <title>About - [Your Name]</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+    <!-- Header -->
     <header>
         <nav>
             <ul>
@@ -20,16 +23,16 @@
         </nav>
     </header>
 
+    <!-- About Section -->
     <section id="about">
         <h1>About Me</h1>
-        <p>Here’s a little about myself...</p>
-        <p>I'm a developer, writer, and creator. I enjoy building things and sharing my knowledge through writing.</p>
+        <p>I'm a designer and developer passionate about creating seamless, intuitive, and meaningful digital experiences. I have worked with a variety of clients to bring their vision to life through creative problem-solving and cutting-edge technology.</p>
     </section>
 
+    <!-- Footer -->
     <footer>
-        <p>&copy; 2025 My Portfolio. All rights reserved.</p>
+        <p>&copy; 2025 [Your Name]. All rights reserved.</p>
     </footer>
 
-    <script src="assets/js/script.js"></script>
 </body>
 </html>
